// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`buildManifest It allows for deploying on new vpc subnet without NAT 1`] = `
"apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: example-service
  labels:
    app: example-service
    product: actions
    component: jest
    tenant-alias: multi-tenant
    iso-country: global
  annotations:
    job-trigger: >-
      https://github.com/example-organization/example-repository/actions/runs/example-run-id/attempts/1
    run.googleapis.com/ingress: internal-and-cloud-load-balancing
    run.googleapis.com/binary-authorization: default
spec:
  template:
    metadata:
      annotations:
        run.googleapis.com/execution-environment: gen2
        autoscaling.knative.dev/minScale: 1
        autoscaling.knative.dev/maxScale: 10
        run.googleapis.com/cpu-throttling: 'true'
        run.googleapis.com/startup-cpu-boost: 'false'
        run.googleapis.com/sessionAffinity: 'false'
        run.googleapis.com/network-interfaces: '[{"network":"clan-network","subnetwork":"cloudrun-subnet"}]'
        run.googleapis.com/vpc-access-egress: private-ranges-only
      labels:
        app: example-service
        product: actions
        component: jest
        tenant-alias: multi-tenant
        iso-country: global
    spec:
      containerConcurrency: 40
      timeoutSeconds: ''
      serviceAccountName: example-service@example-project.iam.gserviceaccount.com
      containers:
        - image: example-image:latest
          name: user-container
          ports:
            - name: http1
              containerPort: 8080
          resources:
            limits:
              cpu: 1
              memory: 512Mi
          env:
            - name: SERVICE_NAME
              value: example-service
            - name: SERVICE_PROJECT_ID
              value: example-project
            - name: SERVICE_ENVIRONMENT
              value: production
            - name: SERVICE_CONTAINER_IMAGE
              value: example-image:latest
            - name: CLAN_NAME
              value: example-clan
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 240
            failureThreshold: 1
            timeoutSeconds: 240
  traffic:
    - percent: 100
      latestRevision: true
"
`;

exports[`buildManifest It allows for deploying on without VPC connection 1`] = `
"apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: example-service
  labels:
    app: example-service
    product: actions
    component: jest
    tenant-alias: multi-tenant
    iso-country: global
  annotations:
    job-trigger: >-
      https://github.com/example-organization/example-repository/actions/runs/example-run-id/attempts/1
    run.googleapis.com/ingress: internal-and-cloud-load-balancing
    run.googleapis.com/binary-authorization: default
spec:
  template:
    metadata:
      annotations:
        run.googleapis.com/execution-environment: gen2
        autoscaling.knative.dev/minScale: 1
        autoscaling.knative.dev/maxScale: 10
        run.googleapis.com/cpu-throttling: 'true'
        run.googleapis.com/startup-cpu-boost: 'false'
        run.googleapis.com/sessionAffinity: 'false'
      labels:
        app: example-service
        product: actions
        component: jest
        tenant-alias: multi-tenant
        iso-country: global
    spec:
      containerConcurrency: 40
      timeoutSeconds: ''
      serviceAccountName: example-service@example-project.iam.gserviceaccount.com
      containers:
        - image: example-image:latest
          name: user-container
          ports:
            - name: http1
              containerPort: 8080
          resources:
            limits:
              cpu: 1
              memory: 512Mi
          env:
            - name: SERVICE_NAME
              value: example-service
            - name: SERVICE_PROJECT_ID
              value: example-project
            - name: SERVICE_ENVIRONMENT
              value: production
            - name: SERVICE_CONTAINER_IMAGE
              value: example-image:latest
            - name: CLAN_NAME
              value: example-clan
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 240
            failureThreshold: 1
            timeoutSeconds: 240
  traffic:
    - percent: 100
      latestRevision: true
"
`;

exports[`buildManifest It generates a OTEL collector sidecar if OTEL is configured on Cloud Run 1`] = `
"apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: example-service
  labels:
    app: example-service
    product: actions
    component: jest
    tenant-alias: multi-tenant
    iso-country: global
  annotations:
    job-trigger: >-
      https://github.com/example-organization/example-repository/actions/runs/example-run-id/attempts/1
    run.googleapis.com/ingress: internal-and-cloud-load-balancing
    run.googleapis.com/binary-authorization: default
spec:
  template:
    metadata:
      annotations:
        run.googleapis.com/execution-environment: gen2
        autoscaling.knative.dev/minScale: 1
        autoscaling.knative.dev/maxScale: 10
        run.googleapis.com/cpu-throttling: 'true'
        run.googleapis.com/startup-cpu-boost: 'false'
        run.googleapis.com/sessionAffinity: 'false'
        run.googleapis.com/network-interfaces: '[{"network":"clan-network","subnetwork":"nat-subnet"}]'
        run.googleapis.com/vpc-access-egress: all-traffic
        run.googleapis.com/container-dependencies: '{"user-container":["collector"]}'
      labels:
        app: example-service
        product: actions
        component: jest
        tenant-alias: multi-tenant
        iso-country: global
    spec:
      containerConcurrency: 40
      timeoutSeconds: ''
      serviceAccountName: example-service@example-project.iam.gserviceaccount.com
      containers:
        - image: example-image:latest
          name: user-container
          ports:
            - name: http1
              containerPort: 8080
          resources:
            limits:
              cpu: 1
              memory: 512Mi
          env:
            - name: SERVICE_NAME
              value: example-service
            - name: SERVICE_PROJECT_ID
              value: example-project
            - name: SERVICE_ENVIRONMENT
              value: production
            - name: SERVICE_CONTAINER_IMAGE
              value: example-image:latest
            - name: CLAN_NAME
              value: example-clan
            - name: OTEL_SERVICE_NAME
              value: example-service
            - name: OTEL_RESOURCE_ATTRIBUTES
              value: service.version=latest
            - name: OTEL_TRACES_EXPORTER
              value: otlp
            - name: OTEL_METRICS_EXPORTER
              value: none
            - name: OTEL_LOGS_EXPORTER
              value: none
            - name: OTEL_TRACES_SAMPLER
              value: parentbased_always_off
            - name: OTEL_PROPAGATORS
              value: b3,tracecontext,baggage
            - name: OTEL_EXPORTER_OTLP_PROTOCOL
              value: grpc
            - name: OTEL_EXPORTER_OTLP_ENDPOINT
              value: http://localhost:4317
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 240
            failureThreshold: 1
            timeoutSeconds: 240
        - image: eu.gcr.io/extenda/otel-collector@sha256:123
          name: collector
          resources:
            limits:
              cpu: '0.1'
              memory: 128Mi
          env:
            - name: SERVICE_NAME
              value: example-service
            - name: PROMETHEUS_SCRAPE_PATH
              value: /metrics
            - name: PROMETHEUS_SCRAPE_PORT
              value: '8080'
            - name: PROMETHEUS_SCRAPE_INTERVAL
              value: '15'
            - name: CONFIG_PROMETHEUS
              value: gmp
            - name: CONFIG_PROMETHEUS_PIPELINES
              value: user-container
            - name: CONFIG_OTEL
              value: otel
          startupProbe:
            tcpSocket:
              port: 13133
            initialDelaySeconds: 0
            periodSeconds: 240
            failureThreshold: 1
            timeoutSeconds: 240
          livenessProbe:
            httpGet:
              path: /health
              port: 13133
            initialDelaySeconds: 5
            periodSeconds: 20
            timeoutSeconds: 10
            failureThreshold: 3
  traffic:
    - percent: 100
      latestRevision: true
"
`;

exports[`buildManifest It generates a collector if OTEL configured 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: example-service
---
apiVersion: v1
kind: Service
metadata:
  name: example-service
  namespace: example-service
  annotations:
    job-trigger: >-
      https://github.com/example-organization/example-repository/actions/runs/example-run-id/attempts/1
    cloud.google.com/neg: '{"exposed_ports":{"80":{"name":"example-service-neg"}}}'
  labels:
    networking.gke.io/service-name: example-service
spec:
  type: NodePort
  selector:
    app: example-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-service
  namespace: example-service
  labels:
    app: example-service
    product: actions
    component: jest
    tenant-alias: multi-tenant
    iso-country: global
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-service
  template:
    metadata:
      labels:
        app: example-service
    spec:
      serviceAccountName: workload-identity-sa
      containers:
        - image: example-image:latest
          imagePullPolicy: IfNotPresent
          name: user-container
          volumeMounts: []
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
            failureThreshold: 10
            timeoutSeconds: 3
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 1
              memory: 512Mi
            limits:
              cpu: 1
              memory: 512Mi
          env:
            - name: POD_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
            - name: CPU_REQUEST
              valueFrom:
                resourceFieldRef:
                  containerName: user-container
                  divisor: 1m
                  resource: requests.cpu
            - name: KEY1
              value: value1
            - name: KEY2
              value: value2
            - name: KEY3
              value: '8080'
            - name: SECRET
              value: sm://example-project/test-secret
            - name: SERVICE_NAME
              value: example-service
            - name: SERVICE_PROJECT_ID
              value: example-project
            - name: SERVICE_ENVIRONMENT
              value: production
            - name: SERVICE_CONTAINER_IMAGE
              value: example-image:latest
            - name: CLAN_NAME
              value: example-clan
            - name: OTEL_SERVICE_NAME
              value: example-service
            - name: OTEL_RESOURCE_ATTRIBUTES
              value: service.version=latest
            - name: OTEL_TRACES_EXPORTER
              value: otlp
            - name: OTEL_METRICS_EXPORTER
              value: none
            - name: OTEL_LOGS_EXPORTER
              value: none
            - name: OTEL_TRACES_SAMPLER
              value: parentbased_always_off
            - name: OTEL_PROPAGATORS
              value: b3,tracecontext,baggage
            - name: OTEL_EXPORTER_OTLP_PROTOCOL
              value: grpc
            - name: OTEL_EXPORTER_OTLP_ENDPOINT
              value: http://localhost:4317
            - name: PORT
              value: '8080'
            - name: K_SERVICE
              value: example-service
        - image: eu.gcr.io/extenda/otel-collector@sha256:123
          name: collector
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: '0.1'
              memory: 128Mi
          env:
            - name: SERVICE_NAME
              value: example-service
            - name: CONFIG_OTEL
              value: otel
          readinessProbe:
            httpGet:
              path: /health
              port: 13133
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
      terminationGracePeriodSeconds: 90
      volumes: []
---
apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
  name: example-service
  namespace: example-service
spec:
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: example-service
  minReplicas: 1
  maxReplicas: 10
  metrics:
    - type: Resource
      resource:
        name: cpu
        target:
          type: Utilization
          averageUtilization: 40
"
`;

exports[`buildManifest It generates a collector sidecar if monitoring is configured on Cloud Run 1`] = `
"apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: example-service
  labels:
    app: example-service
    product: actions
    component: jest
    tenant-alias: multi-tenant
    iso-country: global
  annotations:
    job-trigger: >-
      https://github.com/example-organization/example-repository/actions/runs/example-run-id/attempts/1
    run.googleapis.com/ingress: internal-and-cloud-load-balancing
    run.googleapis.com/binary-authorization: default
spec:
  template:
    metadata:
      annotations:
        run.googleapis.com/execution-environment: gen2
        autoscaling.knative.dev/minScale: 1
        autoscaling.knative.dev/maxScale: 10
        run.googleapis.com/cpu-throttling: 'true'
        run.googleapis.com/startup-cpu-boost: 'false'
        run.googleapis.com/sessionAffinity: 'false'
        run.googleapis.com/network-interfaces: '[{"network":"clan-network","subnetwork":"nat-subnet"}]'
        run.googleapis.com/vpc-access-egress: all-traffic
        run.googleapis.com/container-dependencies: '{"user-container":["collector"]}'
      labels:
        app: example-service
        product: actions
        component: jest
        tenant-alias: multi-tenant
        iso-country: global
    spec:
      containerConcurrency: 40
      timeoutSeconds: ''
      serviceAccountName: example-service@example-project.iam.gserviceaccount.com
      containers:
        - image: example-image:latest
          name: user-container
          ports:
            - name: http1
              containerPort: 8080
          resources:
            limits:
              cpu: 1
              memory: 512Mi
          env:
            - name: SERVICE_NAME
              value: example-service
            - name: SERVICE_PROJECT_ID
              value: example-project
            - name: SERVICE_ENVIRONMENT
              value: production
            - name: SERVICE_CONTAINER_IMAGE
              value: example-image:latest
            - name: CLAN_NAME
              value: example-clan
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 240
            failureThreshold: 1
            timeoutSeconds: 240
        - image: eu.gcr.io/extenda/otel-collector@sha256:123
          name: collector
          resources:
            limits:
              cpu: '0.1'
              memory: 128Mi
          env:
            - name: SERVICE_NAME
              value: example-service
            - name: PROMETHEUS_SCRAPE_PATH
              value: /metrics
            - name: PROMETHEUS_SCRAPE_PORT
              value: '8080'
            - name: PROMETHEUS_SCRAPE_INTERVAL
              value: '15'
            - name: CONFIG_PROMETHEUS
              value: gmp
            - name: CONFIG_PROMETHEUS_PIPELINES
              value: user-container
          startupProbe:
            tcpSocket:
              port: 13133
            initialDelaySeconds: 0
            periodSeconds: 240
            failureThreshold: 1
            timeoutSeconds: 240
          livenessProbe:
            httpGet:
              path: /health
              port: 13133
            initialDelaySeconds: 5
            periodSeconds: 20
            timeoutSeconds: 10
            failureThreshold: 3
  traffic:
    - percent: 100
      latestRevision: true
"
`;

exports[`buildManifest It generates a podmonitor if configured 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: example-service
---
apiVersion: v1
kind: Service
metadata:
  name: example-service
  namespace: example-service
  annotations:
    job-trigger: >-
      https://github.com/example-organization/example-repository/actions/runs/example-run-id/attempts/1
    cloud.google.com/neg: '{"exposed_ports":{"80":{"name":"example-service-neg"}}}'
  labels:
    networking.gke.io/service-name: example-service
spec:
  type: NodePort
  selector:
    app: example-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-service
  namespace: example-service
  labels:
    app: example-service
    product: actions
    component: jest
    tenant-alias: multi-tenant
    iso-country: global
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-service
  template:
    metadata:
      labels:
        app: example-service
    spec:
      serviceAccountName: workload-identity-sa
      containers:
        - image: example-image:latest
          imagePullPolicy: IfNotPresent
          name: user-container
          volumeMounts: []
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
            failureThreshold: 10
            timeoutSeconds: 3
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 1
              memory: 512Mi
            limits:
              cpu: 1
              memory: 512Mi
          env:
            - name: POD_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
            - name: CPU_REQUEST
              valueFrom:
                resourceFieldRef:
                  containerName: user-container
                  divisor: 1m
                  resource: requests.cpu
            - name: KEY1
              value: value1
            - name: KEY2
              value: value2
            - name: KEY3
              value: '8080'
            - name: SECRET
              value: sm://example-project/test-secret
            - name: SERVICE_NAME
              value: example-service
            - name: SERVICE_PROJECT_ID
              value: example-project
            - name: SERVICE_ENVIRONMENT
              value: production
            - name: SERVICE_CONTAINER_IMAGE
              value: example-image:latest
            - name: CLAN_NAME
              value: example-clan
            - name: PORT
              value: '8080'
            - name: K_SERVICE
              value: example-service
      terminationGracePeriodSeconds: 90
      volumes: []
---
apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
  name: example-service
  namespace: example-service
spec:
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: example-service
  minReplicas: 1
  maxReplicas: 10
  metrics:
    - type: Resource
      resource:
        name: cpu
        target:
          type: Utilization
          averageUtilization: 40
"
`;

exports[`buildManifest It generates a podmonitor if configured 2`] = `
"apiVersion: monitoring.googleapis.com/v1
kind: PodMonitoring
metadata:
  name: example-service
  namespace: example-service
spec:
  selector:
    matchLabels:
      app: example-service
  endpoints:
    - port: 8080
      path: /metrics
      interval: 60s
"
`;

exports[`buildManifest It should deploy with iam bindings and audiences 1`] = `
"apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: example-service
  labels:
    app: example-service
    product: actions
    component: jest
    tenant-alias: multi-tenant
    iso-country: global
  annotations:
    job-trigger: >-
      https://github.com/example-organization/example-repository/actions/runs/example-run-id/attempts/1
    run.googleapis.com/ingress: internal-and-cloud-load-balancing
    run.googleapis.com/binary-authorization: default
    run.googleapis.com/custom-audiences: '["example-service","https://example-service.domain.com"]'
spec:
  template:
    metadata:
      annotations:
        run.googleapis.com/execution-environment: gen2
        autoscaling.knative.dev/minScale: 1
        autoscaling.knative.dev/maxScale: 100
        run.googleapis.com/cpu-throttling: 'true'
        run.googleapis.com/startup-cpu-boost: 'false'
        run.googleapis.com/sessionAffinity: 'false'
        run.googleapis.com/network-interfaces: '[{"network":"clan-network","subnetwork":"cloudrun-subnet"}]'
        run.googleapis.com/vpc-access-egress: private-ranges-only
      labels:
        app: example-service
        product: actions
        component: jest
        tenant-alias: multi-tenant
        iso-country: global
    spec:
      containerConcurrency: 80
      timeoutSeconds: ''
      serviceAccountName: example-service@example-project.iam.gserviceaccount.com
      containers:
        - image: example-image:latest
          name: user-container
          ports:
            - name: http1
              containerPort: 8080
          resources:
            limits:
              cpu: 1
              memory: 512Mi
          env:
            - name: KEY1
              value: value1
            - name: KEY2
              value: value2
            - name: SERVICE_NAME
              value: example-service
            - name: SERVICE_PROJECT_ID
              value: example-project
            - name: SERVICE_ENVIRONMENT
              value: dev
            - name: SERVICE_CONTAINER_IMAGE
              value: example-image:latest
            - name: CLAN_NAME
              value: example-clan
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 240
            failureThreshold: 1
            timeoutSeconds: 240
  traffic:
    - percent: 100
      latestRevision: true
"
`;

exports[`buildManifest It should generate cloud run service with annotations 1`] = `
"apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: example-service
  labels:
    app: example-service
    product: actions
    component: jest
    tenant-alias: multi-tenant
    iso-country: global
  annotations:
    job-trigger: >-
      https://github.com/example-organization/example-repository/actions/runs/example-run-id/attempts/1
    run.googleapis.com/ingress: internal-and-cloud-load-balancing
    run.googleapis.com/binary-authorization: default
spec:
  template:
    metadata:
      annotations:
        run.googleapis.com/execution-environment: gen2
        autoscaling.knative.dev/minScale: 1
        autoscaling.knative.dev/maxScale: 100
        run.googleapis.com/cpu-throttling: 'false'
        run.googleapis.com/startup-cpu-boost: 'true'
        run.googleapis.com/sessionAffinity: 'true'
        run.googleapis.com/network-interfaces: '[{"network":"clan-network","subnetwork":"cloudrun-subnet"}]'
        run.googleapis.com/vpc-access-egress: private-ranges-only
      labels:
        app: example-service
        product: actions
        component: jest
        tenant-alias: multi-tenant
        iso-country: global
    spec:
      containerConcurrency: 80
      timeoutSeconds: ''
      serviceAccountName: example-service@example-project.iam.gserviceaccount.com
      containers:
        - image: example-image:latest
          name: user-container
          ports:
            - name: http1
              containerPort: 8080
          resources:
            limits:
              cpu: 1
              memory: 512Mi
          env:
            - name: KEY1
              value: value1
            - name: KEY2
              value: value2
            - name: SERVICE_NAME
              value: example-service
            - name: SERVICE_PROJECT_ID
              value: example-project
            - name: SERVICE_ENVIRONMENT
              value: dev
            - name: SERVICE_CONTAINER_IMAGE
              value: example-image:latest
            - name: CLAN_NAME
              value: example-clan
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 240
            failureThreshold: 1
            timeoutSeconds: 240
  traffic:
    - percent: 100
      latestRevision: true
"
`;

exports[`buildManifest It should generate cloud run service with security 1`] = `
"apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: example-service
  labels:
    app: example-service
    product: actions
    component: jest
    tenant-alias: multi-tenant
    iso-country: global
  annotations:
    job-trigger: >-
      https://github.com/example-organization/example-repository/actions/runs/example-run-id/attempts/1
    run.googleapis.com/ingress: internal-and-cloud-load-balancing
    run.googleapis.com/binary-authorization: default
spec:
  template:
    metadata:
      annotations:
        run.googleapis.com/execution-environment: gen2
        autoscaling.knative.dev/minScale: 1
        autoscaling.knative.dev/maxScale: 100
        run.googleapis.com/cpu-throttling: 'false'
        run.googleapis.com/startup-cpu-boost: 'true'
        run.googleapis.com/sessionAffinity: 'true'
        run.googleapis.com/network-interfaces: '[{"network":"clan-network","subnetwork":"cloudrun-subnet"}]'
        run.googleapis.com/vpc-access-egress: private-ranges-only
        run.googleapis.com/container-dependencies: '{"user-container":["collector"]}'
      labels:
        app: example-service
        product: actions
        component: jest
        tenant-alias: multi-tenant
        iso-country: global
    spec:
      containerConcurrency: 80
      timeoutSeconds: ''
      serviceAccountName: example-service@example-project.iam.gserviceaccount.com
      containers:
        - image: example-image:latest
          name: user-container
          resources:
            limits:
              cpu: 1
              memory: 512Mi
          env:
            - name: KEY1
              value: value1
            - name: KEY2
              value: value2
            - name: SERVICE_NAME
              value: example-service
            - name: SERVICE_PROJECT_ID
              value: example-project
            - name: SERVICE_ENVIRONMENT
              value: dev
            - name: SERVICE_CONTAINER_IMAGE
              value: example-image:latest
            - name: CLAN_NAME
              value: example-clan
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 240
            failureThreshold: 1
            timeoutSeconds: 240
        - name: security-authz
          image: image
          ports:
            - name: http1
              containerPort: 8000
          env:
            - name: ENVOY_PROTOCOL
              value: http
            - name: ENVOY_CORS
              value: 'false'
            - name: CPU_LIMIT
              value: '0.5'
          resources:
            limits:
              cpu: 0.5
              memory: 512Mi
        - image: eu.gcr.io/extenda/otel-collector@sha256:123
          name: collector
          resources:
            limits:
              cpu: '0.08'
              memory: 128Mi
          env:
            - name: SERVICE_NAME
              value: example-service
            - name: PROMETHEUS_SCRAPE_PATH
              value: /metrics
            - name: PROMETHEUS_SCRAPE_PORT
              value: '9001'
            - name: PROMETHEUS_SCRAPE_INTERVAL
              value: '60'
            - name: CONFIG_PROMETHEUS
              value: gmp
            - name: CONFIG_PROMETHEUS_PIPELINES
              value: security-authz
          startupProbe:
            tcpSocket:
              port: 13133
            initialDelaySeconds: 0
            periodSeconds: 240
            failureThreshold: 1
            timeoutSeconds: 240
          livenessProbe:
            httpGet:
              path: /health
              port: 13133
            initialDelaySeconds: 5
            periodSeconds: 20
            timeoutSeconds: 10
            failureThreshold: 3
  traffic:
    - percent: 100
      latestRevision: true
"
`;

exports[`buildManifest It should generate manifest with service-level-min-instances 1`] = `
"apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: example-service
  labels:
    app: example-service
    product: actions
    component: jest
    tenant-alias: multi-tenant
    iso-country: global
  annotations:
    job-trigger: >-
      https://github.com/example-organization/example-repository/actions/runs/example-run-id/attempts/1
    run.googleapis.com/ingress: internal-and-cloud-load-balancing
    run.googleapis.com/binary-authorization: default
    run.googleapis.com/custom-audiences: '["example-service","https://example-service.domain.com"]'
    run.googleapis.com/launch-stage: BETA
    run.googleapis.com/minScale: 1
spec:
  template:
    metadata:
      annotations:
        run.googleapis.com/execution-environment: gen2
        autoscaling.knative.dev/minScale: 0
        autoscaling.knative.dev/maxScale: 100
        run.googleapis.com/cpu-throttling: 'true'
        run.googleapis.com/startup-cpu-boost: 'false'
        run.googleapis.com/sessionAffinity: 'false'
        run.googleapis.com/network-interfaces: '[{"network":"clan-network","subnetwork":"nat-subnet"}]'
        run.googleapis.com/vpc-access-egress: all-traffic
      labels:
        app: example-service
        product: actions
        component: jest
        tenant-alias: multi-tenant
        iso-country: global
    spec:
      containerConcurrency: 80
      timeoutSeconds: ''
      serviceAccountName: example-service@example-project.iam.gserviceaccount.com
      containers:
        - image: example-image:latest
          name: user-container
          ports:
            - name: http1
              containerPort: 8080
          resources:
            limits:
              cpu: 1
              memory: 512Mi
          env:
            - name: KEY1
              value: value1
            - name: KEY2
              value: value2
            - name: SERVICE_NAME
              value: example-service
            - name: SERVICE_PROJECT_ID
              value: example-project
            - name: SERVICE_ENVIRONMENT
              value: dev
            - name: SERVICE_CONTAINER_IMAGE
              value: example-image:latest
            - name: CLAN_NAME
              value: example-clan
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 240
            failureThreshold: 1
            timeoutSeconds: 240
  traffic:
    - percent: 100
      latestRevision: true
"
`;

exports[`buildManifest It should generate manifest with volume for StatefulSet 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: example-service
---
apiVersion: v1
kind: Service
metadata:
  name: example-service
  namespace: example-service
  annotations:
    job-trigger: >-
      https://github.com/example-organization/example-repository/actions/runs/example-run-id/attempts/1
    cloud.google.com/neg: '{"exposed_ports":{"80":{"name":"example-service-neg"}}}'
  labels:
    networking.gke.io/service-name: example-service
spec:
  type: NodePort
  selector:
    app: example-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: example-service
  namespace: example-service
  labels:
    app: example-service
    product: actions
    component: jest
    tenant-alias: multi-tenant
    iso-country: global
spec:
  replicas: 3
  selector:
    matchLabels:
      app: example-service
  volumeClaimTemplates:
    - metadata:
        name: example-service
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: premium-rwo
        resources:
          requests:
            storage: 10Gi
  template:
    metadata:
      labels:
        app: example-service
    spec:
      serviceAccountName: workload-identity-sa
      containers:
        - image: example-image:latest
          imagePullPolicy: IfNotPresent
          name: user-container
          volumeMounts:
            - mountPath: /mnt/data
              name: example-service
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
            failureThreshold: 10
            timeoutSeconds: 3
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 1
              memory: 512Mi
            limits:
              cpu: 1
              memory: 512Mi
          env:
            - name: POD_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
            - name: CPU_REQUEST
              valueFrom:
                resourceFieldRef:
                  containerName: user-container
                  divisor: 1m
                  resource: requests.cpu
            - name: SERVICE_NAME
              value: example-service
            - name: SERVICE_PROJECT_ID
              value: example-project
            - name: SERVICE_ENVIRONMENT
              value: dev
            - name: SERVICE_CONTAINER_IMAGE
              value: example-image:latest
            - name: CLAN_NAME
              value: example-clan
            - name: PORT
              value: '8080'
            - name: K_SERVICE
              value: example-service
      terminationGracePeriodSeconds: 90
      volumes: []
---
apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
  name: example-service
  namespace: example-service
spec:
  scaleTargetRef:
    apiVersion: apps/v1
    kind: StatefulSet
    name: example-service
  minReplicas: 3
  maxReplicas: 3
  metrics:
    - type: Resource
      resource:
        name: cpu
        target:
          type: Utilization
          averageUtilization: 40
"
`;

exports[`buildManifest It should generate manifest with volumes for StatefulSet 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: example-service
---
apiVersion: v1
kind: Service
metadata:
  name: example-service
  namespace: example-service
  annotations:
    job-trigger: >-
      https://github.com/example-organization/example-repository/actions/runs/example-run-id/attempts/1
    cloud.google.com/neg: '{"exposed_ports":{"80":{"name":"example-service-neg"}}}'
  labels:
    networking.gke.io/service-name: example-service
spec:
  type: NodePort
  selector:
    app: example-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: example-service
  namespace: example-service
  labels:
    app: example-service
    product: actions
    component: jest
    iso-country: se
    tenant-alias: testrunner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-service
  volumeClaimTemplates:
    - metadata:
        name: example-service
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: premium-rwo
        resources:
          requests:
            storage: 1Gi
  template:
    metadata:
      labels:
        app: example-service
    spec:
      serviceAccountName: workload-identity-sa
      containers:
        - image: example-image:latest
          imagePullPolicy: IfNotPresent
          name: user-container
          volumeMounts:
            - mountPath: /mnt/shared/data
              name: example-service
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
            failureThreshold: 10
            timeoutSeconds: 3
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 1
              memory: 512Mi
            limits:
              cpu: 1
              memory: 512Mi
          env:
            - name: POD_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
            - name: CPU_REQUEST
              valueFrom:
                resourceFieldRef:
                  containerName: user-container
                  divisor: 1m
                  resource: requests.cpu
            - name: KEY1
              value: value1
            - name: KEY2
              value: value2
            - name: SERVICE_NAME
              value: example-service
            - name: SERVICE_PROJECT_ID
              value: example-project
            - name: SERVICE_ENVIRONMENT
              value: dev
            - name: SERVICE_CONTAINER_IMAGE
              value: example-image:latest
            - name: CLAN_NAME
              value: example-clan
            - name: PORT
              value: '8080'
            - name: K_SERVICE
              value: example-service
      terminationGracePeriodSeconds: 90
      volumes: []
---
apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
  name: example-service
  namespace: example-service
spec:
  scaleTargetRef:
    apiVersion: apps/v1
    kind: StatefulSet
    name: example-service
  minReplicas: 1
  maxReplicas: 10
  metrics:
    - type: Resource
      resource:
        name: cpu
        target:
          type: Utilization
          averageUtilization: 40
"
`;

exports[`buildManifest It should set traffic to 0 of new revision if serve traffic is false 1`] = `
"apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: example-service
  labels:
    app: example-service
    product: actions
    component: jest
    tenant-alias: multi-tenant
    iso-country: global
  annotations:
    job-trigger: >-
      https://github.com/example-organization/example-repository/actions/runs/example-run-id/attempts/1
    run.googleapis.com/ingress: internal-and-cloud-load-balancing
    run.googleapis.com/binary-authorization: default
spec:
  template:
    metadata:
      annotations:
        run.googleapis.com/execution-environment: gen2
        autoscaling.knative.dev/minScale: 1
        autoscaling.knative.dev/maxScale: 100
        run.googleapis.com/cpu-throttling: 'true'
        run.googleapis.com/startup-cpu-boost: 'false'
        run.googleapis.com/sessionAffinity: 'false'
        run.googleapis.com/network-interfaces: '[{"network":"clan-network","subnetwork":"nat-subnet"}]'
        run.googleapis.com/vpc-access-egress: all-traffic
      labels:
        app: example-service
        product: actions
        component: jest
        tenant-alias: multi-tenant
        iso-country: global
    spec:
      containerConcurrency: 80
      timeoutSeconds: ''
      serviceAccountName: example-service@example-project.iam.gserviceaccount.com
      containers:
        - image: example-image:latest
          name: user-container
          ports:
            - name: http1
              containerPort: 8080
          resources:
            limits:
              cpu: 1
              memory: 512Mi
          env:
            - name: KEY1
              value: value1
            - name: KEY2
              value: value2
            - name: SERVICE_NAME
              value: example-service
            - name: SERVICE_PROJECT_ID
              value: example-project
            - name: SERVICE_ENVIRONMENT
              value: dev
            - name: SERVICE_CONTAINER_IMAGE
              value: example-image:latest
            - name: CLAN_NAME
              value: example-clan
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 240
            failureThreshold: 1
            timeoutSeconds: 240
  traffic:
    - percent: 0
      latestRevision: true
    - percent: 100
      revisionName: example-service-lsublujx
"
`;

exports[`buildManifest deploys with envoy auth proxy if set to envoy-opa 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: example-service
---
apiVersion: v1
kind: Service
metadata:
  name: example-service
  namespace: example-service
  annotations:
    job-trigger: >-
      https://github.com/example-organization/example-repository/actions/runs/example-run-id/attempts/1
    cloud.google.com/neg: '{"exposed_ports":{"80":{"name":"example-service-neg"}}}'
  labels:
    networking.gke.io/service-name: example-service
spec:
  type: NodePort
  selector:
    app: example-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-service
  namespace: example-service
  labels:
    app: example-service
    label1: labelValue1
    label2: labelValue2
    product: actions
    component: jest
    tenant-alias: multi-tenant
    iso-country: global
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-service
  template:
    metadata:
      labels:
        app: example-service
    spec:
      serviceAccountName: workload-identity-sa
      containers:
        - image: example-image:latest
          imagePullPolicy: IfNotPresent
          name: user-container
          volumeMounts: []
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
            failureThreshold: 10
            timeoutSeconds: 3
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 9001
              protocol: TCP
          resources:
            requests:
              cpu: 1
              memory: 512Mi
            limits:
              cpu: 1
              memory: 512Mi
          env:
            - name: POD_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
            - name: CPU_REQUEST
              valueFrom:
                resourceFieldRef:
                  containerName: user-container
                  divisor: 1m
                  resource: requests.cpu
            - name: KEY1
              value: value1
            - name: KEY2
              value: value2
            - name: KEY3
              value: '8080'
            - name: SECRET
              value: sm://example-project/test-secret
            - name: SERVICE_NAME
              value: example-service
            - name: SERVICE_PROJECT_ID
              value: example-project
            - name: SERVICE_ENVIRONMENT
              value: production
            - name: SERVICE_CONTAINER_IMAGE
              value: example-image:latest
            - name: CLAN_NAME
              value: example-clan
            - name: PORT
              value: '8080'
            - name: K_SERVICE
              value: example-service
        - name: security-authz
          image: image
          ports:
            - name: http1
              containerPort: 8000
          env:
            - name: ENVOY_PROTOCOL
              value: http
            - name: CPU_LIMIT
              value: '0.5'
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 0.5
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 9001
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 5
      terminationGracePeriodSeconds: 90
      volumes: []
---
apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
  name: example-service
  namespace: example-service
spec:
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: example-service
  minReplicas: 1
  maxReplicas: 10
  metrics:
    - type: Resource
      resource:
        name: cpu
        target:
          type: Utilization
          averageUtilization: 40
"
`;

exports[`buildManifest deploys without envoy auth proxy if set to none 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: example-service
---
apiVersion: v1
kind: Service
metadata:
  name: example-service
  namespace: example-service
  annotations:
    job-trigger: >-
      https://github.com/example-organization/example-repository/actions/runs/example-run-id/attempts/1
    cloud.google.com/neg: '{"exposed_ports":{"80":{"name":"example-service-neg"}}}'
  labels:
    networking.gke.io/service-name: example-service
spec:
  type: NodePort
  selector:
    app: example-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-service
  namespace: example-service
  labels:
    app: example-service
    label1: labelValue1
    label2: labelValue2
    product: actions
    component: jest
    tenant-alias: multi-tenant
    iso-country: global
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-service
  template:
    metadata:
      labels:
        app: example-service
    spec:
      serviceAccountName: workload-identity-sa
      containers:
        - image: example-image:latest
          imagePullPolicy: IfNotPresent
          name: user-container
          volumeMounts: []
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
            failureThreshold: 10
            timeoutSeconds: 3
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 1
              memory: 512Mi
            limits:
              cpu: 1
              memory: 512Mi
          env:
            - name: POD_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
            - name: CPU_REQUEST
              valueFrom:
                resourceFieldRef:
                  containerName: user-container
                  divisor: 1m
                  resource: requests.cpu
            - name: KEY1
              value: value1
            - name: KEY2
              value: value2
            - name: KEY3
              value: '8080'
            - name: SECRET
              value: sm://example-project/test-secret
            - name: SERVICE_NAME
              value: example-service
            - name: SERVICE_PROJECT_ID
              value: example-project
            - name: SERVICE_ENVIRONMENT
              value: production
            - name: SERVICE_CONTAINER_IMAGE
              value: example-image:latest
            - name: CLAN_NAME
              value: example-clan
            - name: PORT
              value: '8080'
            - name: K_SERVICE
              value: example-service
      terminationGracePeriodSeconds: 90
      volumes: []
---
apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
  name: example-service
  namespace: example-service
spec:
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: example-service
  minReplicas: 1
  maxReplicas: 10
  metrics:
    - type: Resource
      resource:
        name: cpu
        target:
          type: Utilization
          averageUtilization: 40
"
`;

exports[`buildManifest should generate exclude-logs label 1`] = `
"apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: example-service
  labels:
    app: example-service
    label1: labelValue1
    label2: labelValue2
    tenant-alias: multi-tenant
    iso-country: global
    exclude-logs: cloud-run
  annotations:
    job-trigger: >-
      https://github.com/example-organization/example-repository/actions/runs/example-run-id/attempts/1
    run.googleapis.com/ingress: internal-and-cloud-load-balancing
    run.googleapis.com/binary-authorization: default
spec:
  template:
    metadata:
      annotations:
        run.googleapis.com/execution-environment: gen2
        autoscaling.knative.dev/minScale: 1
        autoscaling.knative.dev/maxScale: 10
        run.googleapis.com/cpu-throttling: 'true'
        run.googleapis.com/startup-cpu-boost: 'false'
        run.googleapis.com/sessionAffinity: 'false'
        run.googleapis.com/network-interfaces: '[{"network":"clan-network","subnetwork":"nat-subnet"}]'
        run.googleapis.com/vpc-access-egress: all-traffic
      labels:
        app: example-service
        label1: labelValue1
        label2: labelValue2
        tenant-alias: multi-tenant
        iso-country: global
        exclude-logs: cloud-run
    spec:
      containerConcurrency: 40
      timeoutSeconds: ''
      serviceAccountName: example-service@example-project.iam.gserviceaccount.com
      containers:
        - image: example-image:latest
          name: user-container
          ports:
            - name: http1
              containerPort: 8080
          resources:
            limits:
              cpu: 1
              memory: 512Mi
          env:
            - name: SERVICE_NAME
              value: example-service
            - name: SERVICE_PROJECT_ID
              value: example-project
            - name: SERVICE_ENVIRONMENT
              value: production
            - name: SERVICE_CONTAINER_IMAGE
              value: example-image:latest
            - name: CLAN_NAME
              value: example-clan
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 240
            failureThreshold: 1
            timeoutSeconds: 240
  traffic:
    - percent: 100
      latestRevision: true
"
`;

exports[`buildManifest should generate manifest cloudrun file with correct content 1`] = `
"apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: example-service
  labels:
    app: example-service
    label1: labelValue1
    label2: labelValue2
    tenant-alias: multi-tenant
    iso-country: global
  annotations:
    job-trigger: >-
      https://github.com/example-organization/example-repository/actions/runs/example-run-id/attempts/1
    run.googleapis.com/ingress: internal-and-cloud-load-balancing
    run.googleapis.com/binary-authorization: default
spec:
  template:
    metadata:
      annotations:
        run.googleapis.com/execution-environment: gen2
        autoscaling.knative.dev/minScale: 1
        autoscaling.knative.dev/maxScale: 10
        run.googleapis.com/cpu-throttling: 'true'
        run.googleapis.com/startup-cpu-boost: 'false'
        run.googleapis.com/sessionAffinity: 'false'
        run.googleapis.com/network-interfaces: '[{"network":"clan-network","subnetwork":"nat-subnet"}]'
        run.googleapis.com/vpc-access-egress: all-traffic
        run.googleapis.com/cloudsql-instances: instance-name
      labels:
        app: example-service
        label1: labelValue1
        label2: labelValue2
        tenant-alias: multi-tenant
        iso-country: global
    spec:
      containerConcurrency: 40
      timeoutSeconds: ''
      serviceAccountName: example-service@example-project.iam.gserviceaccount.com
      containers:
        - image: example-image:latest
          name: user-container
          ports:
            - name: http1
              containerPort: 8080
          resources:
            limits:
              cpu: 1
              memory: 512Mi
          env:
            - name: KEY1
              value: value1
            - name: KEY2
              value: value2
            - name: KEY3
              value: '8080'
            - name: SECRET
              valueFrom:
                secretKeyRef:
                  key: latest
                  name: test-secret
            - name: SQL_INSTANCE_NAME
              valueFrom:
                secretKeyRef:
                  key: latest
                  name: test-instance-name
            - name: SERVICE_NAME
              value: example-service
            - name: SERVICE_PROJECT_ID
              value: example-project
            - name: SERVICE_ENVIRONMENT
              value: production
            - name: SERVICE_CONTAINER_IMAGE
              value: example-image:latest
            - name: CLAN_NAME
              value: example-clan
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 240
            failureThreshold: 1
            timeoutSeconds: 240
  traffic:
    - percent: 100
      latestRevision: true
"
`;

exports[`buildManifest should generate manifest file with correct content 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: example-service
---
apiVersion: v1
kind: Service
metadata:
  name: example-service
  namespace: example-service
  annotations:
    job-trigger: >-
      https://github.com/example-organization/example-repository/actions/runs/example-run-id/attempts/1
    cloud.google.com/neg: '{"exposed_ports":{"80":{"name":"example-service-neg"}}}'
  labels:
    networking.gke.io/service-name: example-service
spec:
  type: NodePort
  selector:
    app: example-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-service
  namespace: example-service
  labels:
    app: example-service
    label1: labelValue1
    label2: labelValue2
    product: actions
    component: jest
    tenant-alias: multi-tenant
    iso-country: global
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-service
  template:
    metadata:
      labels:
        app: example-service
    spec:
      serviceAccountName: workload-identity-sa
      containers:
        - image: example-image:latest
          imagePullPolicy: IfNotPresent
          name: user-container
          volumeMounts: []
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
            failureThreshold: 10
            timeoutSeconds: 3
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 1
              memory: 512Mi
            limits:
              cpu: 1
              memory: 512Mi
          env:
            - name: POD_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
            - name: CPU_REQUEST
              valueFrom:
                resourceFieldRef:
                  containerName: user-container
                  divisor: 1m
                  resource: requests.cpu
            - name: KEY1
              value: value1
            - name: KEY2
              value: value2
            - name: KEY3
              value: '8080'
            - name: SECRET
              value: sm://example-project/test-secret
            - name: SERVICE_NAME
              value: example-service
            - name: SERVICE_PROJECT_ID
              value: example-project
            - name: SERVICE_ENVIRONMENT
              value: production
            - name: SERVICE_CONTAINER_IMAGE
              value: example-image:latest
            - name: CLAN_NAME
              value: example-clan
            - name: PORT
              value: '8080'
            - name: K_SERVICE
              value: example-service
      terminationGracePeriodSeconds: 90
      volumes: []
---
apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
  name: example-service
  namespace: example-service
spec:
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: example-service
  minReplicas: 1
  maxReplicas: 10
  metrics:
    - type: Resource
      resource:
        name: cpu
        target:
          type: Utilization
          averageUtilization: 40
"
`;

exports[`buildManifest should generate manifest file with correct content for availability high 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: example-service
---
apiVersion: v1
kind: Service
metadata:
  name: example-service
  namespace: example-service
  annotations:
    job-trigger: >-
      https://github.com/example-organization/example-repository/actions/runs/example-run-id/attempts/1
    cloud.google.com/neg: '{"exposed_ports":{"80":{"name":"example-service-neg"}}}'
  labels:
    networking.gke.io/service-name: example-service
spec:
  type: NodePort
  selector:
    app: example-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-service
  namespace: example-service
  labels:
    app: example-service
    label1: labelValue1
    label2: labelValue2
    product: actions
    component: jest
    tenant-alias: multi-tenant
    iso-country: global
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-service
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: 'false'
      labels:
        app: example-service
    spec:
      serviceAccountName: workload-identity-sa
      containers:
        - image: example-image:latest
          imagePullPolicy: IfNotPresent
          name: user-container
          volumeMounts: []
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
            failureThreshold: 10
            timeoutSeconds: 3
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 1
              memory: 512Mi
            limits:
              cpu: 1
              memory: 512Mi
          env:
            - name: POD_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
            - name: CPU_REQUEST
              valueFrom:
                resourceFieldRef:
                  containerName: user-container
                  divisor: 1m
                  resource: requests.cpu
            - name: KEY1
              value: value1
            - name: KEY2
              value: value2
            - name: KEY3
              value: '8080'
            - name: SECRET
              value: sm://example-project/test-secret
            - name: SERVICE_NAME
              value: example-service
            - name: SERVICE_PROJECT_ID
              value: example-project
            - name: SERVICE_ENVIRONMENT
              value: production
            - name: SERVICE_CONTAINER_IMAGE
              value: example-image:latest
            - name: CLAN_NAME
              value: example-clan
            - name: PORT
              value: '8080'
            - name: K_SERVICE
              value: example-service
      terminationGracePeriodSeconds: 90
      volumes: []
---
apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
  name: example-service
  namespace: example-service
spec:
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: example-service
  minReplicas: 1
  maxReplicas: 10
  metrics:
    - type: Resource
      resource:
        name: cpu
        target:
          type: Utilization
          averageUtilization: 40
"
`;

exports[`buildManifest should generate manifest file with correct content for availability low 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: example-service
---
apiVersion: v1
kind: Service
metadata:
  name: example-service
  namespace: example-service
  annotations:
    job-trigger: >-
      https://github.com/example-organization/example-repository/actions/runs/example-run-id/attempts/1
    cloud.google.com/neg: '{"exposed_ports":{"80":{"name":"example-service-neg"}}}'
  labels:
    networking.gke.io/service-name: example-service
spec:
  type: NodePort
  selector:
    app: example-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-service
  namespace: example-service
  labels:
    app: example-service
    label1: labelValue1
    label2: labelValue2
    product: actions
    component: jest
    tenant-alias: multi-tenant
    iso-country: global
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-service
  template:
    metadata:
      labels:
        app: example-service
    spec:
      nodeSelector:
        cloud.google.com/gke-spot: 'true'
      serviceAccountName: workload-identity-sa
      containers:
        - image: example-image:latest
          imagePullPolicy: IfNotPresent
          name: user-container
          volumeMounts: []
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
            failureThreshold: 10
            timeoutSeconds: 3
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 1
              memory: 512Mi
            limits:
              cpu: 1
              memory: 512Mi
          env:
            - name: POD_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
            - name: CPU_REQUEST
              valueFrom:
                resourceFieldRef:
                  containerName: user-container
                  divisor: 1m
                  resource: requests.cpu
            - name: KEY1
              value: value1
            - name: KEY2
              value: value2
            - name: KEY3
              value: '8080'
            - name: SECRET
              value: sm://example-project/test-secret
            - name: SERVICE_NAME
              value: example-service
            - name: SERVICE_PROJECT_ID
              value: example-project
            - name: SERVICE_ENVIRONMENT
              value: production
            - name: SERVICE_CONTAINER_IMAGE
              value: example-image:latest
            - name: CLAN_NAME
              value: example-clan
            - name: PORT
              value: '8080'
            - name: K_SERVICE
              value: example-service
      terminationGracePeriodSeconds: 90
      volumes: []
---
apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
  name: example-service
  namespace: example-service
spec:
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: example-service
  minReplicas: 1
  maxReplicas: 10
  metrics:
    - type: Resource
      resource:
        name: cpu
        target:
          type: Utilization
          averageUtilization: 40
"
`;

exports[`buildManifest should generate manifest file with correct content for staging 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: example-service
---
apiVersion: v1
kind: Service
metadata:
  name: example-service
  namespace: example-service
  annotations:
    job-trigger: >-
      https://github.com/example-organization/example-repository/actions/runs/example-run-id/attempts/1
    cloud.google.com/neg: '{"exposed_ports":{"80":{"name":"example-service-neg"}}}'
  labels:
    networking.gke.io/service-name: example-service
spec:
  type: NodePort
  selector:
    app: example-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-service
  namespace: example-service
  labels:
    app: example-service
    label1: labelValue1
    label2: labelValue2
    product: actions
    component: jest
    tenant-alias: multi-tenant
    iso-country: global
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-service
  template:
    metadata:
      labels:
        app: example-service
    spec:
      nodeSelector:
        cloud.google.com/gke-spot: 'true'
      serviceAccountName: workload-identity-sa
      containers:
        - image: example-image:latest
          imagePullPolicy: IfNotPresent
          name: user-container
          volumeMounts: []
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
            failureThreshold: 10
            timeoutSeconds: 3
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 1
              memory: 512Mi
            limits:
              cpu: 1
              memory: 512Mi
          env:
            - name: POD_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
            - name: CPU_REQUEST
              valueFrom:
                resourceFieldRef:
                  containerName: user-container
                  divisor: 1m
                  resource: requests.cpu
            - name: KEY1
              value: value1
            - name: SERVICE_NAME
              value: example-service
            - name: SERVICE_PROJECT_ID
              value: example-project
            - name: SERVICE_ENVIRONMENT
              value: staging
            - name: SERVICE_CONTAINER_IMAGE
              value: example-image:latest
            - name: CLAN_NAME
              value: example-clan
            - name: PORT
              value: '8080'
            - name: K_SERVICE
              value: example-service
      terminationGracePeriodSeconds: 90
      volumes: []
---
apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
  name: example-service
  namespace: example-service
spec:
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: example-service
  minReplicas: 1
  maxReplicas: 2
  metrics:
    - type: Resource
      resource:
        name: cpu
        target:
          type: Utilization
          averageUtilization: 40
"
`;

exports[`buildManifest should set OPA env vars 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: example-service
---
apiVersion: v1
kind: Service
metadata:
  name: example-service
  namespace: example-service
  annotations:
    job-trigger: >-
      https://github.com/example-organization/example-repository/actions/runs/example-run-id/attempts/1
    cloud.google.com/neg: '{"exposed_ports":{"80":{"name":"example-service-neg"}}}'
  labels:
    networking.gke.io/service-name: example-service
spec:
  type: NodePort
  selector:
    app: example-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-service
  namespace: example-service
  labels:
    app: example-service
    product: actions
    component: jest
    label1: labelValue1
    label2: labelValue2
    tenant-alias: multi-tenant
    iso-country: global
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-service
  template:
    metadata:
      labels:
        app: example-service
    spec:
      serviceAccountName: workload-identity-sa
      containers:
        - image: example-image:latest
          imagePullPolicy: IfNotPresent
          name: user-container
          volumeMounts: []
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
            failureThreshold: 10
            timeoutSeconds: 3
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 9001
              protocol: TCP
          resources:
            requests:
              cpu: 1
              memory: 512Mi
            limits:
              cpu: 1
              memory: 512Mi
          env:
            - name: POD_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
            - name: CPU_REQUEST
              valueFrom:
                resourceFieldRef:
                  containerName: user-container
                  divisor: 1m
                  resource: requests.cpu
            - name: KEY1
              value: value1
            - name: KEY2
              value: value2
            - name: SERVICE_NAME
              value: example-service
            - name: SERVICE_PROJECT_ID
              value: example-project
            - name: SERVICE_ENVIRONMENT
              value: dev
            - name: SERVICE_CONTAINER_IMAGE
              value: example-image:latest
            - name: CLAN_NAME
              value: example-clan
            - name: PORT
              value: '8080'
            - name: K_SERVICE
              value: example-service
        - name: security-authz
          image: eu.gcr.io/extenda/security:authz
          ports:
            - containerPort: 9001
          env:
            - name: ENVOY_PROTOCOL
              value: http
            - name: CPU_LIMIT
              value: '0.5'
          volumeMounts:
            - mountPath: /config
              name: opa
              readOnly: true
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 0.5
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 9001
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 5
      terminationGracePeriodSeconds: 90
      volumes: []
---
apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
  name: example-service
  namespace: example-service
spec:
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: example-service
  minReplicas: 1
  maxReplicas: 10
  metrics:
    - type: Resource
      resource:
        name: cpu
        target:
          type: Utilization
          averageUtilization: 40
"
`;
